--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,9 +1,8 @@
-name: Deploy to GitHub Pages
+name: Deploy Angular App
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -11,36 +10,46 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "npm"
+
       - name: Install dependencies
-        run: npm ci
-        working-directory: namedropper
-      - name: Build
-        run: npx ng build --configuration production --base-href /${{ github.event.repository.name }}/
-        working-directory: namedropper
+        run: |
+          npm install
+          npm audit fix || true
+
+      - name: Build Angular app
+        run: npm run build
+
+      - name: Prepare deployment
+        run: |
+          mkdir -p dist/deploy
+          cp -r dist/showcase/browser/* dist/deploy/
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: namedropper/dist/namedropper
+          path: dist/deploy
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v3
+        id: deployment
+        uses: actions/deploy-pages@v4
