feat: Initialize NameDropper application with Angular and Material Design
- Set up Angular project with Angular CLI and Material Design components.
- Implement core functionality for name sanitization and restoration using codenames.
- Create components for user input, sanitized view, and settings management.
- Add services for managing name mappings and generating unique codenames.
- Integrate markdown support for input and output.
- Implement responsive design with SCSS styling.
- Add unit tests for core functionalities including codename generation and name mapping.
- Include NATO phonetic alphabet as a source for codenames.
- Configure environment settings for production and development.

--- a/angular.json
+++ b/angular.json
@@ -73,5 +73,8 @@
       }
     }
   },
-  "defaultProject": "namedropper"
+  "defaultProject": "namedropper",
+  "cli": {
+    "analytics": false
+  }
 }
