--- a/package.json
+++ b/package.json
@@ -5,25 +5,33 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production",
+    "build:gh-pages": "ng build --configuration production --base-href /NameDropper/",
+    "deploy": "npm run build:gh-pages",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "17.3.0",
+    "@angular/cdk": "17.3.0",
     "@angular/common": "17.3.0",
     "@angular/compiler": "17.3.0",
     "@angular/core": "17.3.0",
     "@angular/forms": "17.3.0",
+    "@angular/material": "17.3.0",
     "@angular/platform-browser": "17.3.0",
     "@angular/platform-browser-dynamic": "17.3.0",
-    "@angular/material": "17.3.0",
-    "@angular/cdk": "17.3.0",
+    "@angular/router": "^17.3.0",
+    "@types/file-saver": "^2.0.7",
+    "css-loader": "^7.1.2",
+    "file-saver": "2.0.5",
+    "marked": "^9.1.6",
+    "ngx-markdown": "^17.1.1",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
-    "zone.js": "0.14.2",
-    "file-saver": "2.0.5"
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^17.3.0",
     "@angular/cli": "17.3.0",
     "@angular/compiler-cli": "17.3.0",
     "@types/jasmine": "5.1.0",
