--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production",
-    "build:gh-pages": "ng build --configuration production --base-href /NameDropper/",
+    "build:gh-pages": "ng build --configuration production",
     "deploy": "npm run build:gh-pages",
     "test": "ng test"
   },
