--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,17 +8,32 @@ services:
     ports:
       - "80:80"
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:80/"]
-      interval: 30s
-      timeout: 10s
+      test:
+        [
+          "CMD",
+          "wget",
+          "--quiet",
+          "--tries=1",
+          "--spider",
+          "http://localhost:80/",
+        ]
+      interval: 10s
+      timeout: 5s
       retries: 3
-      start_period: 40s
+      start_period: 20s
     restart: unless-stopped
+    user: nginx
+    read_only: true
     security_opt:
       - no-new-privileges:true
-    networks:
-      - namedropper-network
-
-networks:
-  namedropper-network:
-    driver: bridge
+    tmpfs:
+      - /tmp
+      - /var/cache/nginx
+      - /var/run
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
+      - NET_BIND_SERVICE
