fix: Restore baseHref option in build configuration for consistent deployment

--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref": "/",
             "outputPath": "dist/namedropper",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -67,9 +68,5 @@
         }
       }
     }
-  },
-  "defaultProject": "namedropper",
-  "cli": {
-    "analytics": false
   }
 }
