--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,18 +22,15 @@ services:
       retries: 3
       start_period: 20s
     restart: unless-stopped
-    user: nginx
+    user: node
     read_only: true
     security_opt:
       - no-new-privileges:true
     tmpfs:
       - /tmp
-      - /var/cache/nginx
-      - /var/run
     cap_drop:
       - ALL
     cap_add:
-      - CHOWN
-      - SETGID
-      - SETUID
       - NET_BIND_SERVICE
+    environment:
+      - NODE_ENV=production
